--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,36 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orga283695">
-<h2 id="orga283695">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga1459e5">
+<h2 id="orga1459e5">Navigation instructions</h2>
+<ul>
+<li>Press <i class="fa fa-bars"></i> at the bottom
+left corner of the page to open a menu.
+<ul>
+<li>Jump to any slide within this presentation to clicking its title.</li>
+<li>Press <i class="fa fa-external-link-alt"></i> to
+navigate to another presentation.</li>
+
+</ul></li>
+<li>Press <a class="hide-on-pdf" onclick="document.location =
+  '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
+"print" a *.pdf of the presentation.</li>
+<li>Press <a onclick="showCaptions()" id="PrintButton"><i class="fa fa-closed-captioning"></i></a>
+to open a written transcript of the audio in the slides.</li>
+<li>Press the <code>SPACE</code> key to progress forward in the presentation.</li>
+<li>Use the <code>UP</code> / <code>DOWN</code> / <code>LEFT</code> / <code>RIGHT</code> arrow keys or the arrows in
+the bottom right corner of the page to navigate the presentation.</li>
+
+</ul>
+
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-org52b4550">
+<h2 id="org52b4550">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -75,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org234479c" data-audio-src="python/title.mp3">
-<h2 id="org234479c">Overview</h2>
+<section id="slide-org84860ee" data-audio-src="python/title.mp3">
+<h2 id="org84860ee">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -159,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org54a88f2" data-audio-src="python/title.mp3">
-<h3 id="org54a88f2">Python</h3>
+<section id="slide-org2d51f8b" data-audio-src="python/title.mp3">
+<h3 id="org2d51f8b">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org9fa73e6">
-<h3 id="org9fa73e6">Jupyter notebooks</h3>
+<section id="slide-org655c3c9">
+<h3 id="org655c3c9">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -191,14 +219,14 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org8029954">
-<h3 id="org8029954">binder</h3>
+<section id="slide-org1fadc63">
+<h3 id="org1fadc63">binder</h3>
 
 
 
 </section>
-<section id="slide-orgec23677">
-<h3 id="orgec23677">Google Colab</h3>
+<section id="slide-org9846b4f">
+<h3 id="org9846b4f">Google Colab</h3>
 
 
 
@@ -206,13 +234,13 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-org679ee12">
-<h2 id="org679ee12">Basics</h2>
-<div class="outline-text-2" id="text-org679ee12">
+<section id="slide-org0e2f765">
+<h2 id="org0e2f765">Basics</h2>
+<div class="outline-text-2" id="text-org0e2f765">
 </div>
 </section>
-<section id="slide-org85cb10a">
-<h3 id="org85cb10a">Python as a calculator</h3>
+<section id="slide-org6dd0752">
+<h3 id="org6dd0752">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -229,22 +257,11 @@ Jupyter notebook
 for more details.
 </div>
 
-<aside class="notes">
-<p>
 
-</p>
-
-
-<ul>
-<li><a href="https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK">https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK</a></li>
-
-</ul>
-
-</aside>
 
 </section>
-<section id="slide-org31f644f">
-<h3 id="org31f644f">Example using variables</h3>
+<section id="slide-org3c94078">
+<h3 id="org3c94078">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -262,52 +279,30 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org5967226">
-<h3 id="org5967226">Variables: Numbers and strings</h3>
-<ul>
-<li>numbers: integers and floats</li>
-<li>strings</li>
-
-</ul>
-
-
-<ul>
-<li>lists</li>
-<li>dictionaries</li>
-
-</ul>
-
-
+<section id="slide-org46131d4">
+<h3 id="org46131d4">Variables: Numbers and strings</h3>
+<iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org9d33fde">
-<h3 id="org9d33fde">Variables: Lists</h3>
+<section id="slide-org633b2bb">
+<h3 id="org633b2bb">Variables: Lists</h3>
 
 </section>
-<section id="slide-org7d8cf16">
-<h3 id="org7d8cf16">Lists</h3>
-<ul>
-<li>comprehensions</li>
-<li>indexing
-<ul>
-<li>retrieving</li>
-<li>slicing</li>
-
-</ul></li>
-
-</ul>
-
+<section id="slide-org0ece6dc">
+<h3 id="org0ece6dc">Lists: Summary</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
-<span style="color: #eedd82;">x_list</span> = [<span style="color: #ffa07a;">'hello'</span>, <span style="color: #ffa07a;">'good bye'</span>, 1.2, 5]
+<span style="color: #eedd82;">x_list</span> = [<span style="color: #ffa07a;">'hello'</span>, <span style="color: #ffa07a;">'good bye'</span>, 1.2, 5]   <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">creating a list</span>
 
-<span style="color: #00ffff;">print</span>(x_list[2])
-<span style="color: #00ffff;">print</span>(x_list[0])
-<span style="color: #00ffff;">print</span>(x_list[-1])
-<span style="color: #00ffff;">print</span>(x_list[-2])
+<span style="color: #00ffff;">print</span>(x_list[0])    <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">accessing first element of a list</span>
+<span style="color: #00ffff;">print</span>(x_list[2])    <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">accessing third element of a list</span>
+<span style="color: #00ffff;">print</span>(x_list[-1])   <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">accessing last element of a list</span>
+<span style="color: #00ffff;">print</span>(x_list[-2])   <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">accessing second to last element of a list</span>
 
-x_list.append(137.0)
+<span style="color: #eedd82;">x_list</span>[3] = 2
+
+x_list.append(137.0)    
 
 <span style="color: #00ffff;">print</span>(x_list)
 
@@ -316,35 +311,40 @@ x_list.append(137.0)
 <span style="color: #00ffff;">print</span>(x_list[:2])
 <span style="color: #00ffff;">print</span>(x_list[2:])
 
-<span style="color: #eedd82;">y_list</span> = [x*x <span style="color: #00ffff;">for</span> x <span style="color: #00ffff;">in</span> <span style="color: #b0c4de;">range</span>(5)]
-<span style="color: #00ffff;">print</span>(y_list)
+<span style="color: #eedd82;">y_list</span> = [x*x <span style="color: #00ffff;">for</span> x <span style="color: #00ffff;">in</span> <span style="color: #b0c4de;">range</span>(5)]    <span style="color: #ff7f24;"># </span><span style="color: #ff7f24;">list comprehension</span>
 
-<span style="color: #eedd82;">x_list</span>[3] = 2
-<span style="color: #00ffff;">print</span>(x_list)
 
 </code></pre>
 </div>
 
 
+</section>
+<section id="slide-orgffc65d3">
+<h3 id="orgffc65d3">Variables: Dictionaries</h3>
 
 </section>
-<section id="slide-orgfd5a242">
-<h3 id="orgfd5a242">Variables: Dictionaries</h3>
+<section id="slide-org7c98ca2">
+<h3 id="org7c98ca2">Example using dictionaries</h3>
+<iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org6e26287">
-<h3 id="org6e26287">Example using dictionaries</h3>
+<section id="slide-org6874a8d">
+<h3 id="org6874a8d">More advanced use of dictionaries</h3>
+<iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orgdf2f19f">
-<h3 id="orgdf2f19f">More advanced use of dictionaries</h3>
+<section id="slide-orgb45d67f">
+<h3 id="orgb45d67f"></h3>
+<p>
+See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_dictionaries.ipynb">colab.</a>
+</p>
 
 </section>
-<section id="slide-org89a5944">
-<h3 id="org89a5944">Strings and printing</h3>
+<section id="slide-orgf0cfda7">
+<h3 id="orgf0cfda7">Strings and printing</h3>
 </section>
-<section id="slide-orgc6c8057">
-<h3 id="orgc6c8057">printing</h3>
+<section id="slide-org25b3271">
+<h3 id="org25b3271">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -354,8 +354,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgfd73dfc">
-<h3 id="orgfd73dfc">Dictionaries</h3>
+<section id="slide-orgcc9ff70">
+<h3 id="orgcc9ff70">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -378,16 +378,16 @@ x<sub>dict</sub> = {k:k**2 for k in range(10)}
 </aside>
 
 </section>
-<section id="slide-org257da11">
-<h3 id="org257da11">loops</h3>
+<section id="slide-org7ca7f9c">
+<h3 id="org7ca7f9c">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
 </p>
 
 </section>
-<section id="slide-orgc3be003">
-<h3 id="orgc3be003">Functions</h3>
+<section id="slide-org8896e29">
+<h3 id="org8896e29">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -397,8 +397,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org71ea1ed">
-<h3 id="org71ea1ed">Conditionals</h3>
+<section id="slide-org7294b90">
+<h3 id="org7294b90">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -409,8 +409,8 @@ for more details.
 
 
 </section>
-<section id="slide-orgeb4cf84">
-<h3 id="orgeb4cf84">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-orgbda32bf">
+<h3 id="orgbda32bf">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -485,8 +485,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-orge45664b">
-<h2 id="orge45664b">Importing libraries</h2>
+<section id="slide-orga66b887">
+<h2 id="orga66b887">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -513,8 +513,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org80069a6">
-<h3 id="org80069a6">numpy</h3>
+<section id="slide-org1ad6172">
+<h3 id="org1ad6172">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -545,8 +545,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org3b463ca">
-<h3 id="org3b463ca">importing numpy</h3>
+<section id="slide-orga87abf5">
+<h3 id="orga87abf5">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -574,8 +574,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org0bc41c4">
-<h3 id="org0bc41c4">matplotlib / pylab</h3>
+<section id="slide-org9833769">
+<h3 id="org9833769">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -598,8 +598,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgc0eea7d">
-<h3 id="orgc0eea7d">scipy</h3>
+<section id="slide-orge3fdc92">
+<h3 id="orge3fdc92">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -610,8 +610,8 @@ nil
 
 
 </section>
-<section id="slide-orga961d33">
-<h3 id="orga961d33">sympy</h3>
+<section id="slide-org9f5997a">
+<h3 id="org9f5997a">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -626,8 +626,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org4ae758d">
-<h3 id="org4ae758d">sympy</h3>
+<section id="slide-org7a5f696">
+<h3 id="org7a5f696">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -640,13 +640,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org7f59a2d">
-<h2 id="org7f59a2d">Further resources</h2>
-<div class="outline-text-2" id="text-org7f59a2d">
+<section id="slide-orgc00ddbd">
+<h2 id="orgc00ddbd">Further resources</h2>
+<div class="outline-text-2" id="text-orgc00ddbd">
 </div>
 </section>
-<section id="slide-org04ffc1c">
-<h3 id="org04ffc1c">Installation</h3>
+<section id="slide-orga8fe4e2">
+<h3 id="orga8fe4e2">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -673,8 +673,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orgcd0824d">
-<h2 id="orgcd0824d">Summary</h2>
+<section id="slide-orgb289fc2">
+<h2 id="orgb289fc2">Summary</h2>
 <aside class="notes">
 nil
 </aside>
