--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orga1459e5">
-<h2 id="orga1459e5">Navigation instructions</h2>
+<section id="slide-orged90814">
+<h2 id="orged90814">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org52b4550">
-<h2 id="org52b4550">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org5a0d9be">
+<h2 id="org5a0d9be">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org84860ee" data-audio-src="python/title.mp3">
-<h2 id="org84860ee">Overview</h2>
+<section id="slide-org68d1670" data-audio-src="python/">
+<h2 id="org68d1670">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -187,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org2d51f8b" data-audio-src="python/title.mp3">
-<h3 id="org2d51f8b">Python</h3>
+<section id="slide-org62e1784" data-audio-src="python/title.mp3">
+<h3 id="org62e1784">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org655c3c9">
-<h3 id="org655c3c9">Jupyter notebooks</h3>
+<section id="slide-org37539c7">
+<h3 id="org37539c7">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -219,14 +219,14 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org1fadc63">
-<h3 id="org1fadc63">binder</h3>
+<section id="slide-org402cfdc">
+<h3 id="org402cfdc">binder</h3>
 
 
 
 </section>
-<section id="slide-org9846b4f">
-<h3 id="org9846b4f">Google Colab</h3>
+<section id="slide-org06fecf8">
+<h3 id="org06fecf8">Google Colab</h3>
 
 
 
@@ -234,13 +234,13 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-org0e2f765">
-<h2 id="org0e2f765">Basics</h2>
-<div class="outline-text-2" id="text-org0e2f765">
+<section id="slide-org103946f">
+<h2 id="org103946f">Basics</h2>
+<div class="outline-text-2" id="text-org103946f">
 </div>
 </section>
-<section id="slide-org6dd0752">
-<h3 id="org6dd0752">Python as a calculator</h3>
+<section id="slide-orgec9be69">
+<h3 id="orgec9be69">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -260,8 +260,8 @@ for more details.
 
 
 </section>
-<section id="slide-org3c94078">
-<h3 id="org3c94078">Example using variables</h3>
+<section id="slide-org1228a6d">
+<h3 id="org1228a6d">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -279,17 +279,18 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org46131d4">
-<h3 id="org46131d4">Variables: Numbers and strings</h3>
+<section id="slide-orgddd47d3">
+<h3 id="orgddd47d3">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org633b2bb">
-<h3 id="org633b2bb">Variables: Lists</h3>
+<section id="slide-org4595e43">
+<h3 id="org4595e43">Variables: Lists</h3>
+<iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org0ece6dc">
-<h3 id="org0ece6dc">Lists: Summary</h3>
+<section id="slide-org3ae50a7">
+<h3 id="org3ae50a7">Lists: Summary</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -319,32 +320,32 @@ x_list.append(137.0)
 
 
 </section>
-<section id="slide-orgffc65d3">
-<h3 id="orgffc65d3">Variables: Dictionaries</h3>
+<section id="slide-org923cc6a">
+<h3 id="org923cc6a">Variables: Dictionaries</h3>
 
 </section>
-<section id="slide-org7c98ca2">
-<h3 id="org7c98ca2">Example using dictionaries</h3>
+<section id="slide-org239c98b">
+<h3 id="org239c98b">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org6874a8d">
-<h3 id="org6874a8d">More advanced use of dictionaries</h3>
+<section id="slide-org8a5f566">
+<h3 id="org8a5f566">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orgb45d67f">
-<h3 id="orgb45d67f"></h3>
+<section id="slide-org809f5eb">
+<h3 id="org809f5eb"></h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_dictionaries.ipynb">colab.</a>
 </p>
 
 </section>
-<section id="slide-orgf0cfda7">
-<h3 id="orgf0cfda7">Strings and printing</h3>
+<section id="slide-org203637e">
+<h3 id="org203637e">Strings and printing</h3>
 </section>
-<section id="slide-org25b3271">
-<h3 id="org25b3271">printing</h3>
+<section id="slide-org2998d1a">
+<h3 id="org2998d1a">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -354,8 +355,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgcc9ff70">
-<h3 id="orgcc9ff70">Dictionaries</h3>
+<section id="slide-org5be1e89">
+<h3 id="org5be1e89">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -378,16 +379,16 @@ x<sub>dict</sub> = {k:k**2 for k in range(10)}
 </aside>
 
 </section>
-<section id="slide-org7ca7f9c">
-<h3 id="org7ca7f9c">loops</h3>
+<section id="slide-org96d8564">
+<h3 id="org96d8564">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
 </p>
 
 </section>
-<section id="slide-org8896e29">
-<h3 id="org8896e29">Functions</h3>
+<section id="slide-org25880b4">
+<h3 id="org25880b4">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -397,8 +398,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org7294b90">
-<h3 id="org7294b90">Conditionals</h3>
+<section id="slide-org529d520">
+<h3 id="org529d520">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -409,8 +410,8 @@ for more details.
 
 
 </section>
-<section id="slide-orgbda32bf">
-<h3 id="orgbda32bf">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org5fa9ad2">
+<h3 id="org5fa9ad2">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -485,8 +486,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-orga66b887">
-<h2 id="orga66b887">Importing libraries</h2>
+<section id="slide-orgc2624d4">
+<h2 id="orgc2624d4">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -513,8 +514,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org1ad6172">
-<h3 id="org1ad6172">numpy</h3>
+<section id="slide-org2506b39">
+<h3 id="org2506b39">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -545,8 +546,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-orga87abf5">
-<h3 id="orga87abf5">importing numpy</h3>
+<section id="slide-org3e1a3af">
+<h3 id="org3e1a3af">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -574,8 +575,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org9833769">
-<h3 id="org9833769">matplotlib / pylab</h3>
+<section id="slide-org19798ca">
+<h3 id="org19798ca">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -598,8 +599,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orge3fdc92">
-<h3 id="orge3fdc92">scipy</h3>
+<section id="slide-org0a0aefb">
+<h3 id="org0a0aefb">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -610,8 +611,8 @@ nil
 
 
 </section>
-<section id="slide-org9f5997a">
-<h3 id="org9f5997a">sympy</h3>
+<section id="slide-orgb353a52">
+<h3 id="orgb353a52">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -626,8 +627,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org7a5f696">
-<h3 id="org7a5f696">sympy</h3>
+<section id="slide-org710a228">
+<h3 id="org710a228">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -640,13 +641,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgc00ddbd">
-<h2 id="orgc00ddbd">Further resources</h2>
-<div class="outline-text-2" id="text-orgc00ddbd">
+<section id="slide-org46397cf">
+<h2 id="org46397cf">Further resources</h2>
+<div class="outline-text-2" id="text-org46397cf">
 </div>
 </section>
-<section id="slide-orga8fe4e2">
-<h3 id="orga8fe4e2">Installation</h3>
+<section id="slide-org2c4e8ba">
+<h3 id="org2c4e8ba">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -673,8 +674,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orgb289fc2">
-<h2 id="orgb289fc2">Summary</h2>
+<section id="slide-orge01f69d">
+<h2 id="orge01f69d">Summary</h2>
 <aside class="notes">
 nil
 </aside>
