--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orged90814">
-<h2 id="orged90814">Navigation instructions</h2>
+<section id="slide-org465c4f6">
+<h2 id="org465c4f6">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org5a0d9be">
-<h2 id="org5a0d9be">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgaf1ed2f">
+<h2 id="orgaf1ed2f">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org68d1670" data-audio-src="python/">
-<h2 id="org68d1670">Overview</h2>
+<section id="slide-org820fa32" data-audio-src="python/">
+<h2 id="org820fa32">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -187,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org62e1784" data-audio-src="python/title.mp3">
-<h3 id="org62e1784">Python</h3>
+<section id="slide-orge7a3d26" data-audio-src="python/title.mp3">
+<h3 id="orge7a3d26">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org37539c7">
-<h3 id="org37539c7">Jupyter notebooks</h3>
+<section id="slide-org80b29af">
+<h3 id="org80b29af">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -219,14 +219,14 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org402cfdc">
-<h3 id="org402cfdc">binder</h3>
+<section id="slide-org3bd3cfd">
+<h3 id="org3bd3cfd">binder</h3>
 
 
 
 </section>
-<section id="slide-org06fecf8">
-<h3 id="org06fecf8">Google Colab</h3>
+<section id="slide-orgaf0d78a">
+<h3 id="orgaf0d78a">Google Colab</h3>
 
 
 
@@ -234,13 +234,13 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-org103946f">
-<h2 id="org103946f">Basics</h2>
-<div class="outline-text-2" id="text-org103946f">
+<section id="slide-orge54b559">
+<h2 id="orge54b559">Basics</h2>
+<div class="outline-text-2" id="text-orge54b559">
 </div>
 </section>
-<section id="slide-orgec9be69">
-<h3 id="orgec9be69">Python as a calculator</h3>
+<section id="slide-org4b9b95b">
+<h3 id="org4b9b95b">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -260,8 +260,8 @@ for more details.
 
 
 </section>
-<section id="slide-org1228a6d">
-<h3 id="org1228a6d">Example using variables</h3>
+<section id="slide-orgb59b1ea">
+<h3 id="orgb59b1ea">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -279,18 +279,18 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orgddd47d3">
-<h3 id="orgddd47d3">Variables: Numbers and strings</h3>
+<section id="slide-orgc51a22a">
+<h3 id="orgc51a22a">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org4595e43">
-<h3 id="org4595e43">Variables: Lists</h3>
+<section id="slide-org656d400">
+<h3 id="org656d400">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org3ae50a7">
-<h3 id="org3ae50a7">Lists: Summary</h3>
+<section id="slide-org5ce4bf0">
+<h3 id="org5ce4bf0">Lists: Summary</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -318,34 +318,39 @@ x_list.append(137.0)
 </code></pre>
 </div>
 
+<p>
+See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_lists.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_lists.ipynb">colab</a>.
+</p>
+
+
 
 </section>
-<section id="slide-org923cc6a">
-<h3 id="org923cc6a">Variables: Dictionaries</h3>
+<section id="slide-orgb98015a">
+<h3 id="orgb98015a">Variables: Dictionaries</h3>
 
 </section>
-<section id="slide-org239c98b">
-<h3 id="org239c98b">Example using dictionaries</h3>
+<section id="slide-org5d4a50e">
+<h3 id="org5d4a50e">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org8a5f566">
-<h3 id="org8a5f566">More advanced use of dictionaries</h3>
+<section id="slide-org6ef475e">
+<h3 id="org6ef475e">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org809f5eb">
-<h3 id="org809f5eb"></h3>
+<section id="slide-orgd628adf">
+<h3 id="orgd628adf"></h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_dictionaries.ipynb">colab.</a>
 </p>
 
 </section>
-<section id="slide-org203637e">
-<h3 id="org203637e">Strings and printing</h3>
+<section id="slide-orgf6849e2">
+<h3 id="orgf6849e2">Strings and printing</h3>
 </section>
-<section id="slide-org2998d1a">
-<h3 id="org2998d1a">printing</h3>
+<section id="slide-org7294740">
+<h3 id="org7294740">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -355,8 +360,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org5be1e89">
-<h3 id="org5be1e89">Dictionaries</h3>
+<section id="slide-orgedf98e8">
+<h3 id="orgedf98e8">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -379,16 +384,16 @@ x<sub>dict</sub> = {k:k**2 for k in range(10)}
 </aside>
 
 </section>
-<section id="slide-org96d8564">
-<h3 id="org96d8564">loops</h3>
+<section id="slide-org64700af">
+<h3 id="org64700af">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
 </p>
 
 </section>
-<section id="slide-org25880b4">
-<h3 id="org25880b4">Functions</h3>
+<section id="slide-org99729e4">
+<h3 id="org99729e4">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -398,8 +403,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org529d520">
-<h3 id="org529d520">Conditionals</h3>
+<section id="slide-orga2debf9">
+<h3 id="orga2debf9">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -410,8 +415,8 @@ for more details.
 
 
 </section>
-<section id="slide-org5fa9ad2">
-<h3 id="org5fa9ad2">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org530e525">
+<h3 id="org530e525">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -486,8 +491,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-orgc2624d4">
-<h2 id="orgc2624d4">Importing libraries</h2>
+<section id="slide-org08bed6c">
+<h2 id="org08bed6c">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -514,8 +519,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org2506b39">
-<h3 id="org2506b39">numpy</h3>
+<section id="slide-org97ca4a7">
+<h3 id="org97ca4a7">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -546,8 +551,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org3e1a3af">
-<h3 id="org3e1a3af">importing numpy</h3>
+<section id="slide-orgd157457">
+<h3 id="orgd157457">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -575,8 +580,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org19798ca">
-<h3 id="org19798ca">matplotlib / pylab</h3>
+<section id="slide-orgfa6407e">
+<h3 id="orgfa6407e">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -599,8 +604,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org0a0aefb">
-<h3 id="org0a0aefb">scipy</h3>
+<section id="slide-org17b1a5c">
+<h3 id="org17b1a5c">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -611,8 +616,8 @@ nil
 
 
 </section>
-<section id="slide-orgb353a52">
-<h3 id="orgb353a52">sympy</h3>
+<section id="slide-org47fb63d">
+<h3 id="org47fb63d">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -627,8 +632,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org710a228">
-<h3 id="org710a228">sympy</h3>
+<section id="slide-orgb44528a">
+<h3 id="orgb44528a">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -641,13 +646,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org46397cf">
-<h2 id="org46397cf">Further resources</h2>
-<div class="outline-text-2" id="text-org46397cf">
+<section id="slide-org94f8076">
+<h2 id="org94f8076">Further resources</h2>
+<div class="outline-text-2" id="text-org94f8076">
 </div>
 </section>
-<section id="slide-org2c4e8ba">
-<h3 id="org2c4e8ba">Installation</h3>
+<section id="slide-orgc867c4b">
+<h3 id="orgc867c4b">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -674,8 +679,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orge01f69d">
-<h2 id="orge01f69d">Summary</h2>
+<section id="slide-orgd942337">
+<h2 id="orgd942337">Summary</h2>
 <aside class="notes">
 nil
 </aside>
